--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- add copyright -->
 <head>
 	<title>Title Changed</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
