adding conflicting changes (on purpose) for git example

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- add copyright -->
 <head>
-	<title>Title Changed</title>
+	<title>Very Respectul webiste</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,11 +15,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I'm note sure what will go here, but I'm sure it will be nice.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Hop Top 2014</p>
 	</footer>
 </body>
 </html>
