master branch before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<!-- add copyright -->
+<!-- add copyright 
+	Adding changes before rebaseing conflicts
+-->
 <head>
 	<title>Very Respectul webiste</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
