adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- add copyright 
-	Adding changes before rebaseing conflicts
-	Trololo
+	Adding changes before rebaseing 
 -->
 <head>
 	<title>Very Respectul webiste</title>
@@ -18,7 +17,6 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-		<!--adding conflicting changes to file -->
 			Just some content
 		</p>
 	</main>
