mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- add copyright 
 	Adding changes before rebaseing conflicts
+	Trololo
 -->
 <head>
 	<title>Very Respectul webiste</title>
@@ -17,6 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
+		<!--adding conflicting changes to file -->
 			Just some content
 		</p>
 	</main>
