Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<!-- add copyright 
-	Adding changes before rebaseing 
--->
+<!-- add copyright -->
 <head>
 	<title>Very Respectul webiste</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
