local: updating simple.html copyright

--- a/simple.html
+++ b/simple.html
@@ -19,7 +19,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Trololo 2014</p>
+		<p>&copy; Trololo 2014 etc bla bla</p>
 	</footer>
 </body>
 </html>
