Changes after git stash branch command

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- add copyright -->
 <head>
-	<title>New title trololo webiste</title>
+	<title>New title trololo Stash branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
